change image source

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="C:\Users\Blessed\Documents\Web Development\HTML - Personal Site\Images\Zhavio.png" alt="a image of Zhavio" width="200px" , width="25%" , or height="50%">
+  <img src="Images\Zhavio.png" alt="a image of Zhavio" width="200px" , width="25%" , or height="50%">
   <h1>Zhavio Lewis</h1>
   <p><em>CEO and Founder of <strong>Get Money Forever</strong></em></p>
   <p>Hi, my name is <strong>Zhavio Lewis</strong> and this my bio for my first basic website that i am learning to create. I am a self taught Web Development student using Angela Yu's Udemy course in the hopes of pursing a career as a Front End Web
