Changed contact me source

--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
 
   </table>
   <br>
-  <a href="C:\Users\Blessed\Documents\Web Development\HTML - Personal Site\Contact.html" target="_blank">Contact Me</a>
+  <a href="Contact.html" target="_blank">Contact Me</a>
 </body>
 </html>
