Changed address due to privacy concerns

--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <h2>Contact Information</h2>
     <ul>
       <li>Email: zhavio25@gmail.com</li>
-      <li>Address: Bridgetown,Barbados</li>
+      <li>Address: Earth, Milky Way Galaxy</li>
 
     </ul>
     <hr>
